# P1logger

./: .gitignore  Dockerfile  LICENSE.txt  README.md  grafana.json  requirements.txt
.github/: FUNDING.yml
.github/workflows/: docker-image.yml
Firmware/: .gitignore  CMakeLists.txt  LICENSE  README.md  crc.c  crc.h  main.c  main_x64.c  packet.c  packet.h  program.sh
Firmware/Testing/: fluv_3ph_50215.txt  log.txt  single.txt  single2.txt
Firmware/extra/: b1200.py  firmware.py  log.py  modeset.py  uart_fake_meter.py
P1logger/: __init__.py  __main__.py  obis.py
